refonte du code pour que les repostories et les services soient bien distincts et que l'api n'utilise que la business layer

--- a/NavalWar.Business/NavalWar.Business.csproj
+++ b/NavalWar.Business/NavalWar.Business.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NavalWar.DAL\NavalWar.DAL.csproj" />
     <ProjectReference Include="..\NavalWar.DTO\NavalWar.DTO.csproj" />
   </ItemGroup>
 
